Second try to create the GoogleRouteService